[gd_scene load_steps=14 format=3 uid="uid://te4a26ibtve6"]

[ext_resource type="Script" path="res://player.gd" id="1_djkky"]
[ext_resource type="Texture2D" uid="uid://b3obt7t0x4aav" path="res://sprites/player/gun_sprites.png" id="3_qifal"]
[ext_resource type="AudioStream" uid="uid://cvuj8r1btkfyc" path="res://sounds/player/walking.ogg" id="4_mhl8t"]
[ext_resource type="AudioStream" uid="uid://0puc6q857iia" path="res://sounds/player/revolver_shot1.wav" id="5_b1tir"]
[ext_resource type="Texture2D" uid="uid://8ggihh27mlrr" path="res://sprites/blob_shadow.png" id="6_kvg0j"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_yuvlw"]
radius = 0.3
height = 1.5

[sub_resource type="CapsuleMesh" id="CapsuleMesh_8vo8x"]
radius = 0.3
height = 1.5

[sub_resource type="AtlasTexture" id="AtlasTexture_rtscl"]
atlas = ExtResource("3_qifal")
region = Rect2(0, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_8a83v"]
atlas = ExtResource("3_qifal")
region = Rect2(512, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_7eh3w"]
atlas = ExtResource("3_qifal")
region = Rect2(1024, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_65rmr"]
atlas = ExtResource("3_qifal")
region = Rect2(1536, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_pfpop"]
atlas = ExtResource("3_qifal")
region = Rect2(0, 0, 512, 512)

[sub_resource type="SpriteFrames" id="SpriteFrames_mdn72"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rtscl")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8a83v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7eh3w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_65rmr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pfpop")
}],
"loop": false,
"name": &"shoot",
"speed": 10.0
}]

[node name="Player" type="CharacterBody3D" groups=["player"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
collision_layer = 4
collision_mask = 4551
script = ExtResource("1_djkky")

[node name="Collider" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.35, 0)
shape = SubResource("CapsuleShape3D_yuvlw")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.35, 0)
mesh = SubResource("CapsuleMesh_8vo8x")

[node name="head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="Camera3D" type="Camera3D" parent="head"]
cull_mask = 1048573
current = true
fov = 80.0

[node name="SubViewportContainer" type="SubViewportContainer" parent="head/Camera3D"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="head/Camera3D/SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(1152, 648)
render_target_update_mode = 4

[node name="RayCast" type="RayCast3D" parent="head/Camera3D" groups=["Player"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0999999, 0)
target_position = Vector3(0, 0, -100)
collision_mask = 255

[node name="gun_flash" type="OmniLight3D" parent="head/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -3.2)
omni_range = 12.0
omni_attenuation = 1.8025

[node name="gun_flash2" type="SpotLight3D" parent="head/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.2, 0)
light_energy = 2.0
spot_range = 12.0
spot_angle = 15.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="GunBase" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
metadata/_edit_use_anchors_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="CanvasLayer/GunBase"]
position = Vector2(408, -142)
scale = Vector2(0.76, 0.76)
sprite_frames = SubResource("SpriteFrames_mdn72")
animation = &"shoot"
autoplay = "idle"

[node name="crosshair" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.5
offset_top = -10.5
offset_right = 10.5
offset_bottom = 10.5
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0.352941)
metadata/_edit_use_anchors_ = true

[node name="deathscreen" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/deathscreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.356863, 0, 0, 1)

[node name="panel" type="Panel" parent="CanvasLayer/deathscreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -257.0
offset_top = -69.0
offset_right = 257.0
offset_bottom = 69.0
grow_horizontal = 2
grow_vertical = 2

[node name="youdied text" type="Label" parent="CanvasLayer/deathscreen/panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -36.0
offset_top = -48.0
offset_right = 36.0
offset_bottom = -25.0
grow_horizontal = 2
grow_vertical = 2
text = "You died!
"

[node name="Button" type="Button" parent="CanvasLayer/deathscreen/panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.5
offset_top = -8.5
offset_right = 32.5
offset_bottom = 22.5
grow_horizontal = 2
grow_vertical = 2
text = "Restart
"

[node name="SoundFootsteps" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_mhl8t")
autoplay = true

[node name="gunsound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_b1tir")

[node name="Fire_Timer" type="Timer" parent="."]
wait_time = 3.0

[node name="cooldown" type="Timer" parent="."]

[node name="shadow" type="Decal" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.35, 0)
texture_albedo = ExtResource("6_kvg0j")

[node name="Flash_Timer" type="Timer" parent="."]
wait_time = 0.2

[connection signal="animation_finished" from="CanvasLayer/GunBase/AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="button_up" from="CanvasLayer/deathscreen/panel/Button" to="." method="_on_button_button_up"]
[connection signal="timeout" from="Fire_Timer" to="." method="_on_fire_timer_timeout"]
[connection signal="timeout" from="Flash_Timer" to="." method="_on_flash_timer_timeout"]
